--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
- <head>
- </head>
- <body>
-   <h1>Hello World<h1>
- </body>
+    <head>
+        <title>Example</title>
+    </head>
+    <body>
+        <p>This is an example of a simple HTML page with one paragraph.</p>
+    </body>
 </html>
