--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Example</title>
     </head>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph...</p>
+        <h1>I'm the most important!</h1>
+        <h2>I'm less important!</h2>
+        <h6>I'm the least important</h6>
     </body>
 </html>
